# dicetower

./: Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2024-08-22-025934_tabletop/: down.sql  up.sql
migrations/2024-08-22-035250_players/: up.sql
migrations/2024-08-22-035258_deck_archetypes/: down.sql  up.sql
migrations/2024-08-22-035301_cards/: up.sql
migrations/2024-08-22-035304_decks/: down.sql  up.sql
migrations/2024-08-23-193939_spread/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: decks.rs  mod.rs  tabletop.rs
