[package]
name = "dicetower"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = "1.0.208"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
