[package]
name = "dicetower"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
dotenvy = "0.15.7"
serde = "1.0.208"
serde_json = "1.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
